clusters/sirius/apps/beets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beets
  template:
    metadata:
      labels:
        app: beets
    spec:
      containers:
        - name: beets
          image: lscr.io/linuxserver/beets:latest
          ports:
            - containerPort: 8337
          volumeMounts:
            - name: config
              mountPath: /config
            - name: audiobooks
              mountPath: /audiobooks
            - name: downloads
              mountPath: /downloads
            - name: initscript
              mountPath: /custom-cont-init.d
          readinessProbe:
            exec:
              command:
                - test
                - -f
                - /config/DONOTDELETE  # Correct path for test file
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - test
                - -f
                - /config/DONOTDELETE  # Correct path for test file
            initialDelaySeconds: 10
            periodSeconds: 30
      volumes:
        - name: config
          hostPath:
            path: /mnt/secondary/beets/config # Correct config path
            type: DirectoryOrCreate
        - name: audiobooks
          hostPath:
            path: /mnt/secondary/readarr/books # Correct music path
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /mnt/secondary/transmission/data/complete # Correct ingest path
            type: DirectoryOrCreate
        - name: initscript
          hostPath:
            path: /mnt/secondary/beets/config/scripts
            type: DirectoryOrCreate
