clusters/sirius/apps/beets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beets
spec:
  selector:
    app: beets
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8337
      name: http
  type: ClusterIP
