clusters/sirius/apps/beets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beets-ingress
  annotations:
    cert-manager.io/cluster-issuer: default-clusterissuer
spec:
  tls:
    - hosts:
        - beets.sirius.moonblade.work
      secretName: beets-cert
  rules:
    - host: beets.sirius.moonblade.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beets
                port:
                  name: http
